[gd_scene load_steps=6 format=2]

[ext_resource path="res://tile.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 2 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("mover:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "grab"
tracks/0/type = "value"
tracks/0/path = NodePath("./mover:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mover/clickable/visual/shadow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mover/clickable/visual/shadow:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 4, 4 ) ]
}

[node name="tile" type="Node2D"]
script = ExtResource( 1 )

[node name="area_static" type="Area2D" parent="."]
position = Vector2( 16, 16 )
collision_mask = 2

[node name="collision_shape" type="CollisionShape2D" parent="area_static"]
shape = SubResource( 1 )

[node name="mover" type="Node2D" parent="."]
__meta__ = {
"_editor_description_": "This is the part that gets dragged around by the user."
}

[node name="clickable" type="Control" parent="mover"]
margin_right = 32.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="visual" type="Control" parent="mover/clickable"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Visual elements."
}

[node name="shadow" type="ColorRect" parent="mover/clickable/visual"]
modulate = Color( 1, 1, 1, 0.1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = 1.99999
margin_bottom = 1.99999
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rectangle" type="ColorRect" parent="mover/clickable/visual"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.392157, 0.392157, 0.392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highlight" type="ColorRect" parent="mover/clickable/visual/rectangle"]
margin_right = 32.0
margin_bottom = 2.0
mouse_filter = 1
color = Color( 1, 1, 1, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border" type="Line2D" parent="mover/clickable/visual/rectangle"]
points = PoolVector2Array( 32, 0, 32, 32, 0, 32, 0, 0, 32, 0 )
width = 2.0
default_color = Color( 0, 0, 0, 0.75 )
end_cap_mode = 1

[node name="area_small" type="Area2D" parent="mover"]
collision_layer = 2
collision_mask = 0
__meta__ = {
"_editor_description_": "Collides with the 'area_static' of other tiles."
}

[node name="collision_shape" type="CollisionShape2D" parent="mover/area_small"]
position = Vector2( 16, 16 )
shape = SubResource( 2 )

[node name="animations" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/flyback = SubResource( 3 )
anims/grab = SubResource( 4 )

[node name="tween" type="Tween" parent="."]

[connection signal="gui_input" from="mover/clickable" to="." method="_on_Control_gui_input"]
[connection signal="area_entered" from="mover/area_small" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="mover/area_small" to="." method="_on_area_area_exited"]
[connection signal="tween_completed" from="tween" to="." method="_on_tween_tween_completed"]
